Kubernetes/Database/Couchdb/yamls/couchdb-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-couchdb-basic-auth
  namespace: couchdb
spec:
  basicAuth:
    secret: traefik-couchdb-basic-auth
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-couchdb-https-redirect
  namespace: couchdb
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-couchdb-security
  namespace: couchdb
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-couchdb-websecure
  namespace: couchdb 
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`couchdb.domain.com`)
      services:
        - name: couchdb-couchdb
          port: 5984
          serversTransport: traefik-couchdb-transport
      middlewares:
        - name: traefik-couchdb-basic-auth
        - name: traefik-couchdb-security
  tls:
    secretName: couchdb-domain
    options:
      name: traefik-couchdb-tlsoptions
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-couchdb-web
  namespace: couchdb
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`couchdb.domain.com`)
      services:
        - name: couchdb-couchdb
          port: 5984
      middlewares:
        - name: traefik-couchdb-https-redirect
